using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnwall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    internal static string skill01Tap = "skill01Tap";
    internal static string skill01Cooldown = "skill01Cooldown";
    internal static string skill01Release = "skill01Release";
    internal static string isBlocking = "skill01Blocking";
    internal static string skill01CounterAtk = "skill01CounterAtk";
    internal static string canChangeDIR = "canChangeDIR";
    internal static string skill02Tap = "skill02Tap";
    internal static string skill03Tap = "skill03Tap";
    internal static string skill02Cooldown = "skill02Cooldown";
    internal static string skill03Cooldown = "skill03Cooldown";
    internal static string isInvincible = "isInvincible";
    internal static string lockInAir = "lockInAir";
    internal static string skill03StunFinished = "skill03StunFinished";
    internal static string canAttack = "canAttack";
    internal static string canJump = "canJump";
}